// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiLargeTitle is rendered 1`] = `
<h1
  aria-label="aria-label"
  class="kuiLargeTitle testClass1 testClass2"
  data-test-subj="test subject string"
>
  Hello
</h1>
`;

exports[`KuiMediumTitle is rendered 1`] = `
<h1
  aria-label="aria-label"
  class="kuiMediumTitle testClass1 testClass2"
  data-test-subj="test subject string"
>
  Hello
</h1>
`;

exports[`KuiSmallTitle is rendered 1`] = `
<h1
  aria-label="aria-label"
  class="kuiSmallTitle testClass1 testClass2"
  data-test-subj="test subject string"
>
  Hello
</h1>
`;

exports[`KuiText is rendered 1`] = `
<h1
  aria-label="aria-label"
  class="kuiText testClass1 testClass2"
  data-test-subj="test subject string"
>
  Hello
</h1>
`;
